Updated requirements in Drupal documentation.

--- a/drupal/INSTALL.txt
+++ b/drupal/INSTALL.txt
@@ -1,7 +1,7 @@
 REQUIREMENTS
 ------------
 
-This module requires Drupal 6.x and PHP 5.2.x (or newer), and the RDF module.
+This module requires Drupal 6.x and PHP 5.1.x (or newer).
 
 
 INSTALLATION
